Enable checking of smack context from DBus interface
Conflicts:
	bus/driver.c
	cmake/CMakeLists.txt

Change-Id: Ibc9d1ccb86c3b28d8df3a4becf33ba30234832d8

--- a/bus/Makefile.am
+++ b/bus/Makefile.am
@@ -9,6 +9,7 @@ DBUS_BUS_LIBS = \
 	$(THREAD_LIBS) \
 	$(ADT_LIBS) \
 	$(NETWORK_libs) \
+	$(LIBSMACK_LIBS) \
 	$(NULL)
 
 DBUS_LAUNCHER_LIBS = \
@@ -24,6 +25,8 @@ AM_CPPFLAGS = \
 	$(APPARMOR_CFLAGS) \
 	-DDBUS_SYSTEM_CONFIG_FILE=\""$(dbusdatadir)/system.conf"\" \
 	-DDBUS_COMPILATION \
+	-DDBUS_STATIC_BUILD \
+	$(LIBSMACK_CFLAGS) \
 	$(NULL)
 
 # if assertions are enabled, improve backtraces
@@ -106,6 +109,8 @@ BUS_SOURCES=					\
 	services.h				\
 	signals.c				\
 	signals.h				\
+	smack.c                                 \
+	smack.h                                 \
 	stats.c					\
 	stats.h					\
 	test.c					\
