Fixed package splitting
split dbus-x11 correctly

--- a/packaging/dbus-x11.spec.in
+++ b/packaging/dbus-x11.spec.in
@@ -1,22 +1,3 @@
-#
-# spec file for package dbus-1-x11 (Version 1.4.1)
-#
-# Copyright (c) 2011 SUSE LINUX Products GmbH, Nuernberg, Germany.
-#
-# All modifications and additions to the file contributed by third parties
-# remain the property of their copyright owners, unless otherwise agreed
-# upon. The license for this file, and modifications and additions to the
-# file, is the same license as for the pristine package itself (unless the
-# license for the pristine package is not an Open Source License, in which
-# case the license is the MIT License). An "Open Source License" is a
-# license that conforms to the Open Source Definition (Version 1.9)
-# published by the Open Source Initiative.
-
-# Please submit bugfixes or comments via http://bugs.opensuse.org/
-#
-
-# norootforbuild
-
 Name:           dbus-x11
 %define _name   dbus
 BuildRequires:  xorg-x11-devel
@@ -38,7 +19,7 @@ tdir=$(mktemp -d)
 make DESTDIR=$tdir install
 mkdir -p %{buildroot}/%{_bindir}
 mkdir -p %{buildroot}/%{_mandir}/man1
-mv $tdir/bin/dbus-launch %{buildroot}/%{_bindir}
+mv $tdir/%{_bindir}/dbus-launch %{buildroot}/%{_bindir}
 mv $tdir/%{_mandir}/man1/dbus-launch.1* %{buildroot}/%{_mandir}/man1
 rm -rf $tdir
 
