--- a/bus/system.conf.in
+++ b/bus/system.conf.in
@@ -47,8 +47,8 @@
 
     <!-- Holes must be punched in service configuration files for
          name ownership and sending method calls -->
-    <deny own="*"/>
-    <deny send_type="method_call"/>
+    <allow own="*"/>
+    <allow send_type="method_call"/>
 
     <!-- Signals and reply messages (method returns, errors) are allowed
          by default -->
