policy: temporary workaround for libdbuspolicy parser issue
Change-Id: I04c508a6e14568ad6e28f687a433f6bde3f815f8

--- a/bus/session.conf.in
+++ b/bus/session.conf.in
@@ -33,6 +33,9 @@
     <allow eavesdrop="true"/>
     <!-- Allow anyone to own anything -->
     <allow own="*"/>
+    <allow send_type="method_call"/>
+    <allow receive_type="method_call"/>
+    <allow receive_type="method_return"/>
   </policy>
 
   <!-- Include legacy configuration location -->
