--- a/project.config
+++ b/project.config
@@ -1,7 +1,4 @@
 [access]
 	inheritFrom = scm/acls/domain_system/ipc
 [project]
-	description = "Domain: Base;"\n\
-"Maintainers: Chengwei Yang;"\n\
-"Licenses: GPL,AFL-2.1;"\n\
-
+	description = "Domain: System / IPC;"
