Onlycap-related fix in system dbus.service (SmackProcessLabel=System)
Change-Id: I725049c020a107774f79cf2685c7505497b6723d

--- a/bus/dbus.service.in
+++ b/bus/dbus.service.in
@@ -7,3 +7,4 @@ Requires=dbus.socket
 ExecStart=@EXPANDED_BINDIR@/dbus-daemon --system --address=systemd: --nofork --systemd-activation
 ExecReload=@EXPANDED_BINDIR@/dbus-send --print-reply --system --type=method_call --dest=org.freedesktop.DBus / org.freedesktop.DBus.ReloadConfig
 OOMScoreAdjust=-900
+SmackProcessLabel=System
